--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="content">
 
-    <header class="wrapper-small ta-center">
+    <header class="wrapper ta-center">
       <img src="img/inqr-slogan.svg" alt="InQR slogan" width="100%">
     </header>
     <section class="grid wrapper">
